--- a/arch/arm/dts/rockchip-u-boot.dtsi
+++ b/arch/arm/dts/rockchip-u-boot.dtsi
@@ -58,6 +58,8 @@
 #endif
 #if defined(CONFIG_SPL_GZIP)
 					compression = "gzip";
+#elif defined(CONFIG_SPL_LZMA)
+					compression = "lzma";
 #else
 					compression = "none";
 #endif
@@ -66,6 +68,8 @@
 					u-boot-nodtb {
 #if defined(CONFIG_SPL_GZIP)
 					compress = "gzip";
+#elif defined(CONFIG_SPL_LZMA)
+					compress = "lzma";
 #endif
 					};
 #ifdef CONFIG_SPL_FIT_SIGNATURE
