--- a/arch/arm/dts/my_imx6ul-14x14-evk.dtsi
+++ b/arch/arm/dts/my_imx6ul-14x14-evk.dtsi
@@ -181,6 +181,8 @@
 	phy-mode = "rmii";
 	phy-handle = <&ethphy0>;
 	phy-supply = <&reg_peri_3v3>;
+	phy-reset-gpios = <&gpio5 9  GPIO_ACTIVE_LOW>;
+	phy-reset-duration = <26>;
 	status = "okay";
 };
 
@@ -190,15 +192,15 @@
 	phy-mode = "rmii";
 	phy-handle = <&ethphy1>;
 	phy-supply = <&reg_peri_3v3>;
-	status = "okay";
+	status = "disable";
 
 	mdio {
 		#address-cells = <1>;
 		#size-cells = <0>;
 
-		ethphy0: ethernet-phy@2 {
+		ethphy0: ethernet-phy@0 {
 			compatible = "ethernet-phy-id0022.1560";
-			reg = <2>;
+			reg = <0>;
 			micrel,led-mode = <1>;
 			clocks = <&clks IMX6UL_CLK_ENET_REF>;
 			clock-names = "rmii-ref";
@@ -414,6 +416,8 @@
 
 	pinctrl_enet1: enet1grp {
 		fsl,pins = <
+			MX6UL_PAD_GPIO1_IO06__ENET1_MDIO        0x1b0b0
+			MX6UL_PAD_GPIO1_IO07__ENET1_MDC         0x1b0b0
 			MX6UL_PAD_ENET1_RX_EN__ENET1_RX_EN	0x1b0b0
 			MX6UL_PAD_ENET1_RX_ER__ENET1_RX_ER	0x1b0b0
 			MX6UL_PAD_ENET1_RX_DATA0__ENET1_RDATA00	0x1b0b0
@@ -422,6 +426,7 @@
 			MX6UL_PAD_ENET1_TX_DATA0__ENET1_TDATA00	0x1b0b0
 			MX6UL_PAD_ENET1_TX_DATA1__ENET1_TDATA01	0x1b0b0
 			MX6UL_PAD_ENET1_TX_CLK__ENET1_REF_CLK1	0x4001b031
+			MX6ULL_PAD_SNVS_TAMPER9__GPIO5_IO09	0x79
 		>;
 	};
 
